--- a/Front End/MovieMania/MovieMania/Base.lproj/Main.storyboard
+++ b/Front End/MovieMania/MovieMania/Base.lproj/Main.storyboard
@@ -156,6 +156,9 @@
                                                     <rect key="frame" x="276" y="7" width="92" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" image="arrow.turn.left.down" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="sortPressed:" destination="6aM-pN-oja" eventType="touchUpInside" id="jox-c7-prD"/>
+                                                    </connections>
                                                 </button>
                                             </barButtonItem>
                                         </rightBarButtonItems>
@@ -170,11 +173,11 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="79" id="0s8-v9-OHY" customClass="MovieCell" customModule="MovieMania" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="79"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="696" id="0s8-v9-OHY" customClass="MovieCell" customModule="MovieMania" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="696"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0s8-v9-OHY" id="nsE-5G-7Z5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="696"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HEC-KF-UlJ">
@@ -362,6 +365,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
                                                         <action selector="Login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7y4-Gh-Qoc"/>
+                                                        <action selector="saveChanges:" destination="0s8-v9-OHY" eventType="touchUpInside" id="tDi-CW-nfi"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
